<resources>
    <string name="app_name">FOOD LOVER</string>
    <string name="emailhint">Email</string>
    <string name="passhint">Password</string>
    <string name="btnstr">Login</string>
    <string name="namefield">Name</string>
    <string name="Register">Register</string>
    <string name="Add_item">Add Item</string>
    <string name="Delete_item">Delete Item</string>
    <string name="Add_Client">Add Client</string>
    <string name="Delete_Client">Delete Client</string>
    <string name="post">Post</string>
    <string name="vieworders">View Orders</string>
    <string name="Client_list">Client List</string>
    <string name="Massage">Massage</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Regi">Register</string>
    <string name="addpost">Add Post</string>
    <string name="deletepost">Delete Post</string>
    <string name="startbtn">Start</string>
    <string name="welcometext">Welcome to Food Lover Admin Panel</string>
    <string name="enterfoodname">Enter Food Name</string>
    <string name="description">Enter Discription</string>
    <string name="price">Price</string>
    <string name="psubmit">Submit</string>
    <string name="dsearch">Search</string>
    <string name="dname">Enter Name</string>
    <string name="ddate">Enter Date</string>
    <string name="clname">Client Name</string>
    <string name="clemail">Client Email</string>
    <string name="clsubmit">Submit</string>
    <string name="cldname">Client Name</string>
    <string name="cldemail">Client Email</string>
    <string name="cldelete">Delete</string>
    <string name="msgsentadmin">Sent</string>
    <string name="msgggadmin">Write a Massage</string>
    <string name="sentb">Massaging</string>
    <string name="inboxmsg">Inbox</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="post_offers">Post Offers</string>
    <string name="post_offer">Post</string>
    <string name="food_name_offer">Food Name</string>
    <string name="discount_price_offer">Discount Price</string>
    <string name="restaurant_name_offers">Restaurant Name</string>
    <string name="quantity">Quantity</string>
    <string name="food_id_no">Food Id No</string>
    <string name="fidfood">Food Id</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="opennev">Open</string>
    <string name="closenev">Close</string>
    <string name="title_activity_foodmenu2">foodmenu2</string>
</resources>
