<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/e_bacc"
    android:orientation="vertical"
    android:id="@+id/navidrawer2"
    tools:context=".postfooditem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical">


    <ImageButton
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="187dp"
        android:onClick="ImgButtonClicked"
        app:srcCompat="@mipmap/add" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/enterfoodname" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/description" />

    <EditText
    android:id="@+id/editText3"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:ems="10"
    android:background="@android:color/white"
    android:inputType="textPersonName"
        android:layout_margin="5dp"
    android:hint="@string/price" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:ems="10"
        android:background="@android:color/white"
        android:inputType="textPersonName"
        android:hint="@string/restaurant_name" />
    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:ems="10"
        android:background="@android:color/white"
        android:inputType="textPersonName"
        android:hint="@string/food_id_no" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:text="@string/psubmit" />
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nv2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navmenu"
        android:layout_gravity="start"
        app:headerLayout="@layout/hedernev">


    </android.support.design.widget.NavigationView>
</android.support.v4.widget.DrawerLayout>
