<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/e_bacc"
    android:id="@+id/navidrawer3"
    tools:context=".offers_post">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical">

    <ImageButton
        android:id="@+id/imgoffer"
        android:layout_width="match_parent"
        android:layout_height="193dp"
        android:onClick="ImgButtonClicked"
        app:srcCompat="@mipmap/add" />

    <EditText
        android:id="@+id/offer1"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/food_name_offer" />

    <EditText
        android:id="@+id/offer2"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:background="@android:color/white"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/quantity" />

    <EditText
        android:id="@+id/offer3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:background="@android:color/white"
        android:inputType="textPersonName"
        android:layout_margin="5dp"
        android:hint="@string/discount_price_offer" />

    <EditText
        android:id="@+id/offer4"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:ems="10"
        android:background="@android:color/white"
        android:inputType="textPersonName"
        android:hint="@string/restaurant_name_offers" />
    <EditText
        android:id="@+id/foodidtext"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="40dp"
        android:ems="10"
        android:background="@android:color/white"
        android:inputType="textPersonName"
        android:hint="@string/fidfood" />

    <Button
        android:id="@+id/postbtn"
        android:layout_width="wrap_content"
        android:background="@drawable/button"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/post_offer" />
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nv3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navmenu"
        android:layout_gravity="start"
        app:headerLayout="@layout/hedernev">


    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>