<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/e_bacc"
    android:orientation="vertical"
    android:id="@+id/navidrawer1"
    tools:context=".Foodmanue">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:textStyle="bold"
            android:background="@drawable/button"
            android:textSize="20sp"
            android:text="@string/post" />


        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:background="@drawable/button"
            android:textStyle="bold"
            android:text="@string/vieworders"
            android:textSize="20sp" />


        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:textSize="20sp"
            android:background="@drawable/button"
            android:textStyle="bold"
            android:text="@string/Massage" />
        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/button"
            android:text="@string/post_offers" />
                </LinearLayout>
        </ScrollView>
        </LinearLayout>


        <android.support.design.widget.NavigationView
            android:id="@+id/nv1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:menu="@menu/navmenu"
            android:layout_gravity="start"
            app:headerLayout="@layout/hedernev">


        </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>